--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
+  - "10"
+  - "12"
   - "14"
 services: mongodb  
 cache:  
@@ -8,10 +10,5 @@ cache:
 install:
   - npm install
 script:
- 
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: chmod +x ./deploy.sh && ./deploy.sh
-    on:
-      branch: master
+  - npm run lint
+  - npm test
